--- a/firma_verel.htm
+++ b/firma_verel.htm
@@ -1,27 +1,23 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<style>
-    body { font-family: Calibri, sans-serif; font-size: 11pt; color: #253747; }
-    a { color: #0066cc; text-decoration: none; }
-</style>
 </head>
-<body>
-<table cellpadding="0" cellspacing="0" style="font-family: Calibri, sans-serif; font-size: 11pt; color: #253747;">
+<body style="font-family: Calibri, sans-serif; font-size: 11pt; color: #253747;">
+<table cellpadding="0" cellspacing="0" style="color: #253747;">
   <tr>
     <td style="padding-bottom: 16px;">
-      <img src="https://raw.githubusercontent.com/stefanopeschiera/firma-verel/refs/heads/main/logo-verel.png" alt="Verel Logo" style="height: 40px;" />
+      <img src="https://raw.githubusercontent.com/stefanopeschiera/firma-verel/refs/heads/main/logo-verel.png" alt="Verel Logo" height="40" style="height: 40px;" />
     </td>
   </tr>
   <tr>
-    <td style="font-weight: bold; font-size: 12pt; color: #253747; padding-bottom: 2px;">Laura Avanzi</td>
+    <td style="font-weight: bold; font-size: 12pt; padding-bottom: 2px;">Laura Avanzi</td>
   </tr>
   <tr>
-    <td style="color: #253747; padding-bottom: 12px;">Head of Marketing & Communications</td>
+    <td style="padding-bottom: 12px;">Head of Marketing & Communications</td>
   </tr>
   <tr>
     <td style="padding-bottom: 2px;">
-      <a href="mailto:laura.avanzi@verel.it">laura.avanzi@verel.it</a>
+      <a href="mailto:laura.avanzi@verel.it" style="color: #253747; text-decoration: none;">laura.avanzi@verel.it</a>
     </td>
   </tr>
   <tr>
@@ -42,9 +38,27 @@
   <tr>
     <td>T. +39 0521 850643</td>
   </tr>
+  <tr><td style="padding-top: 12px;"></td></tr>
   <tr>
     <td>
-      <a href="https://www.verel.it" target="_blank">www.verel.it</a>
+      <table cellpadding="0" cellspacing="0">
+        <tr>
+          <td style="vertical-align: middle; height: 24px;">
+            <img src="https://raw.githubusercontent.com/stefanopeschiera/firma-verel/refs/heads/main/globe-icon.png" alt="Web icon" height="24" style="height: 24px; width: 24px; display: inline-block; vertical-align: middle;" />
+          </td>
+          <td style="vertical-align: middle; padding-left: 6px;">
+            <a href="https://www.verel.it" target="_blank" style="color: #253747; text-decoration: none;">www.verel.it</a>
+          </td>
+        </tr>
+        <tr>
+          <td style="vertical-align: middle; height: 24px;">
+            <img src="https://raw.githubusercontent.com/stefanopeschiera/firma-verel/refs/heads/main/linkedin-icon.png" alt="LinkedIn icon" height="24" style="height: 24px; width: 24px; display: inline-block; vertical-align: middle;" />
+          </td>
+          <td style="vertical-align: middle; padding-left: 6px;">
+            <a href="https://www.linkedin.com/company/verel-s.r.l/" target="_blank" style="color: #253747; text-decoration: none;">Follow us on LinkedIn</a>
+          </td>
+        </tr>
+      </table>
     </td>
   </tr>
 </table>
