--- a/firma_verel_test.htm
+++ b/firma_verel_test.htm
@@ -6,7 +6,7 @@
 <table cellpadding="0" cellspacing="0" style="color: #253747;">
   <tr>
     <td style="padding-bottom: 16px;">
-      <img src="https://raw.githubusercontent.com/stefanopeschiera/firma-verel/refs/heads/main/logo-verel@2.png" alt="Verel Logo" height="40" style="height: 40px; width: 230px;" />
+      <img src="https://raw.githubusercontent.com/stefanopeschiera/firma-verel/refs/heads/main/logo-verel@2.png" alt="Verel Logo" height="40" style="height: 40px;" />
     </td>
   </tr>
   <tr>
