--- a/firma_verel_test.htm
+++ b/firma_verel_test.htm
@@ -2,7 +2,7 @@
 <head>
 <meta charset="UTF-8">
 </head>
-<body style="font-family: Calibri, sans-serif; font-size: 11pt; color: #253747;">
+<body style="font-family: Helvetica, Arial, sans-serif;; font-size: 11pt; color: #253747;">
 <table cellpadding="0" cellspacing="0" style="color: #253747;">
   <tr>
     <td style="padding-bottom: 16px;">
