--- a/firma_verel_test.htm
+++ b/firma_verel_test.htm
@@ -2,31 +2,31 @@
 <head>
 <meta charset="UTF-8">
 </head>
-<body style="font-family: Helvetica, Arial, sans-serif;; font-size: 11pt; color: #253747;">
-<table cellpadding="0" cellspacing="0" style="color: #253747;">
+<body style="font-family: Helvetica, Arial, sans-serif; font-size: 11pt; color: #253747; line-height: 1.2;">
+<table cellpadding="0" cellspacing="0" style="color: #253747; line-height: 1.2;">
   <tr>
-    <td style="padding-bottom: 16px;">
+    <td style="padding-bottom: 12px;">
       <img src="https://raw.githubusercontent.com/stefanopeschiera/firma-verel/refs/heads/main/logo-verel@2.png" alt="Verel Logo" height="40" style="height: 40px;" />
     </td>
   </tr>
   <tr>
-    <td style="font-weight: bold; font-size: 12pt; padding-bottom: 2px;">Laura Avanzi</td>
+    <td style="font-weight: bold; font-size: 12pt; padding-bottom: 2px; line-height: 1.2;">Laura Avanzi</td>
   </tr>
   <tr>
-    <td style="padding-bottom: 12px;">Head of Marketing & Communications</td>
+    <td style="padding-bottom: 10px; line-height: 1.2;">Head of Marketing & Communications</td>
   </tr>
   <tr>
-    <td style="padding-bottom: 2px;">
+    <td style="padding-bottom: 2px; line-height: 1.2;">
       <a href="mailto:laura.avanzi@verel.it" style="color: #253747; text-decoration: none;">laura.avanzi@verel.it</a>
     </td>
   </tr>
   <tr>
-    <td style="padding-bottom: 12px;">M: +39 345 7033698</td>
+    <td style="padding-bottom: 10px; line-height: 1.2;">M: +39 345 7033698</td>
   </tr>
-  <tr><td style="padding-top: 12px;"></td></tr>
+  <tr><td style="padding-top: 10px;"></td></tr>
   <tr>
     <td>
-      <table cellpadding="0" cellspacing="0">
+      <table cellpadding="0" cellspacing="0" style="line-height: 1.2;">
         <tr>
           <td style="vertical-align: middle; height: 24px;">
             <img src="https://raw.githubusercontent.com/stefanopeschiera/firma-verel/refs/heads/main/globe-icon@2.png" alt="Web icon" height="24" style="height: 24px; width: 24px; display: inline-block; vertical-align: middle;" />
